--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
-
   </head>
   <body>
     <div class="banner__wrapper">
@@ -78,6 +77,7 @@
         </p>
       </div>
     </div>
+    <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
