--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <button class="popup__button">Jetzt konfigurieren</button>
         </div>
         <div class="banner__logo">
-          <img src="./assets/img/logo.svg.png" alt="logo" class="logo__media" />
+          <img src="./assets/img/logo.png" alt="logo" class="logo__media" />
         </div>
         <div class="banner__content">
           <div class="banner__content-left">
