--- a/index.html
+++ b/index.html
@@ -47,11 +47,7 @@
           </div>
           <div class="banner__content-right">
             <div class="bunner__bubble">
-              <img
-                src="./assets/img/bubble-2.png"
-                alt=""
-                class="bubble__media"
-              />
+              <p>Sprechen Sie nach: <br/> <strong>„Hallo Caddy, wechsle zum nächsten Feature.“</strong> </p>
             </div>
             <button class="banner__micro">
               <img
