--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               alt="close"
             />
           </button>
-          <video class="popup__video" autoplay muted>
+          <video class="popup__video" autoplay muted loop>
             <source src="./assets/video/video-4.mp4" />
           </video>
           <button class="video__btn sound-off">
