--- a/index.html
+++ b/index.html
@@ -55,10 +55,7 @@
           </div>
           <div class="banner__content-right">
             <div class="bunner__bubble">
-              <p>
-                Sprechen Sie nach: <br />
-                <strong>„Hallo Caddy, wechsle zum nächsten Feature.“</strong>
-              </p>
+              <img src="./assets/img/comics1.svg" alt="" class="bubble__media">
             </div>
             <button class="banner__micro">
               <img
