--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
   <body>
     <div class="banner__wrapper">
@@ -26,7 +29,11 @@
             <source src="./assets/video/video-4.mp4" />
           </video>
           <button class="video__btn sound-off">
-            <img src="./assets/img/sound-off.png" alt="sound img" class="video__img" />
+            <img
+              src="./assets/img/sound-off.png"
+              alt="sound img"
+              class="video__img"
+            />
           </button>
           <p class="popup__text">
             Alles im Blick: Mit den neuen LED Frontscheinwerfern* und LED
@@ -54,7 +61,11 @@
           </div>
           <div class="banner__content-right">
             <div class="bunner__bubble">
-              <img src="./assets/img/comics1.svg" alt="" class="bubble__media">
+              <img
+                src="./assets/img/comics1.svg"
+                alt=""
+                class="bubble__media"
+              />
             </div>
             <button class="banner__micro">
               <img
