--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
           <div class="banner__content-right">
             <div class="bunner__bubble">
               <img
-                src="./assets/img/comics1.svg"
+                src="./assets/img/comics.svg"
                 alt=""
                 class="bubble__media"
               />
             </div>
-            <button class="banner__micro">
+            <button class="banner__micro banner__micro-animate">
               <img
                 class="micro__media"
                 src="./assets/img/micro.svg"
