animate btn micro

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 class="bubble__media"
               />
             </div>
-            <button class="banner__micro banner__micro-animate">
+            <button class="banner__micro">
               <img
                 class="micro__media"
                 src="./assets/img/micro.svg"
