--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
             <button class="banner__micro">
               <img
-                class="micro__media"
+                class="micro__media micro__media-noaction"
                 src="./assets/img/micro.svg"
                 alt="microphone"
               />
