new text banner

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             Alles im Blick: Mit den neuen LED Frontscheinwerfern* und LED
             Rückleuchten* entgeht Ihnen nichts mehr.
           </p>
-          <button class="popup__button">Jetzt konfigurieren</button>
+            <img src="./assets/fonts/Frame w2.svg" alt="" class="popup__button-media" />
         </div>
         <div class="banner__logo">
           <img src="./assets/img/logo.png" alt="logo" class="logo__media" />
@@ -47,25 +47,24 @@
         <div class="banner__content">
           <div class="banner__content-left">
             <div class="banner__text">
-              <strong
-                >Der neue <br />
-                Caddy Cargo</strong
-              >
-              <br />
-              <span
-                >Bereit für alles, <br />
-                was kommt</span
-              >
+              <img
+                src="./assets/fonts/Der neue Caddy Cargo.svg"
+                alt=""
+                class="text__strong"
+              />
+              <img
+                src="./assets/fonts/Bereit für alles, was kommt.svg"
+                alt=""
+                class="text__span"
+              />
             </div>
-            <button class="banner__btn">Jetzt konfigurieren</button>
+            <button class="banner__btn">
+              <img src="./assets/fonts/Frame 1.svg" alt="" class="btn__media" />
+            </button>
           </div>
           <div class="banner__content-right">
             <div class="bunner__bubble">
-              <img
-                src="./assets/img/comics.svg"
-                alt=""
-                class="bubble__media"
-              />
+              <img src="./assets/img/comics.svg" alt="" class="bubble__media" />
             </div>
             <button class="banner__micro">
               <img
@@ -83,9 +82,14 @@
             </button>
           </div>
         </div>
-        <p class="banner__subtext">
-          Abbildung zeigt Sonderausstattung gegen Mehrpreis
-        </p>
+        <div class="banner__subtext">
+          <img
+            style="width: 210px; height: 15px"
+            src="./assets/fonts/Abbildung zeigt Sonderausstattung gegen Mehrpreis..svg"
+            alt=""
+            class="banner__subtext"
+          />
+        </div>
       </div>
     </div>
     <script src="script.js"></script>
