--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             style="width: 210px; height: 15px"
             src="./assets/fonts/Abbildung zeigt Sonderausstattung gegen Mehrpreis..svg"
             alt=""
-            class="banner__subtext"
+            class="banner__first-media"
           />
         </div>
       </div>
