--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </button>
           </div>
           <div class="banner__content-right">
-            <div class="bunner__bubble">
+            <div class="bunner__bubble bunner__bubble-animate">
               <img src="./assets/img/comics.svg" alt="" class="bubble__media" />
             </div>
             <button class="banner__micro">
