--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 class="text__strong"
               />
               <img
-                src="./assets/fonts/Bereit für alles, was kommt.svg"
+                src="./assets/fonts/Bereit fur alles was kommt.svg"
                 alt=""
                 class="text__span"
               />
@@ -85,7 +85,7 @@
         <div class="banner__subtext">
           <img
             style="width: 210px; height: 15px"
-            src="./assets/fonts/Abbildung zeigt Sonderausstattung gegen Mehrpreis..svg"
+            src="./assets/fonts/Abbildung zeigt Sonderausstattung gegen Mehrpreis.svg"
             alt=""
             class="banner__first-media"
           />
