--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             Alles im Blick: Mit den neuen LED Frontscheinwerfern* und LED
             Rückleuchten* entgeht Ihnen nichts mehr.
           </p>
-            <img src="./assets/fonts/Frame w2.svg" alt="" class="popup__button-media" />
+            <img src="./assets/fonts/Frame-w2.svg" alt="" class="popup__button-media" />
         </div>
         <div class="banner__logo">
           <img src="./assets/img/logo.png" alt="logo" class="logo__media" />
@@ -48,22 +48,22 @@
           <div class="banner__content-left">
             <div class="banner__text">
               <img
-                src="./assets/fonts/Der neue Caddy Cargo.svg"
+                src="./assets/fonts/Der-neue-Caddy-Cargo.svg"
                 alt=""
                 class="text__strong"
               />
               <img
-                src="./assets/fonts/Bereit fur alles was kommt.svg"
+                src="./assets/fonts/Bereit-fur-alles-was-kommt.svg"
                 alt=""
                 class="text__span"
               />
             </div>
             <button class="banner__btn">
-              <img src="./assets/fonts/Frame 1.svg" alt="" class="btn__media" />
+              <img src="./assets/fonts/Frame-1.svg" alt="" class="btn__media" />
             </button>
           </div>
           <div class="banner__content-right">
-            <div class="bunner__bubble bunner__bubble-animate">
+            <div class="bunner__bubble">
               <img src="./assets/img/comics.svg" alt="" class="bubble__media" />
             </div>
             <button class="banner__micro">
@@ -85,7 +85,7 @@
         <div class="banner__subtext">
           <img
             style="width: 210px; height: 15px"
-            src="./assets/fonts/Abbildung zeigt Sonderausstattung gegen Mehrpreis.svg"
+            src="./assets/fonts/Abbildung-zeigt-Sonderausstattung-gegen-Mehrpreis.svg"
             alt=""
             class="banner__first-media"
           />
