--- a/index.html
+++ b/index.html
@@ -10,85 +10,88 @@
     <![endif]-->
   </head>
   <body>
-    <div class="banner__wrapper">
-      <div class="banner" data-step="1">
-        <div class="popup__open-wrapp">
-          <button class="popup__open">
-            <img src="./assets/img/plus.svg" alt="open" class="open__media" />
-          </button>
-        </div>
-        <div class="banner__popup close">
-          <button class="popup__close">
-            <img
-              class="close__media"
-              src="./assets/img/close.svg"
-              alt="close"
-            />
-          </button>
-          <video class="popup__video" autoplay muted loop>
-            <source src="./assets/video/video-4.mp4" />
-          </video>
-          <button class="video__btn sound-off">
-            <img
-              src="./assets/img/sound-off.png"
-              alt="sound img"
-              class="video__img"
-            />
-          </button>
-          <p class="popup__text">
-            Alles im Blick: Mit den neuen LED Frontscheinwerfern* und LED
-            Rückleuchten* entgeht Ihnen nichts mehr.
-          </p>
-            <img src="./assets/fonts/Frame-w2.svg" alt="" class="popup__button-media" />
-        </div>
-        <div class="banner__logo">
-          <img src="./assets/img/logo.png" alt="logo" class="logo__media" />
-        </div>
-        <div class="banner__content">
-          <div class="banner__content-left">
-            <div class="banner__text">
-              <img
-                src="./assets/fonts/Der-neue-Caddy-Cargo.svg"
-                alt=""
-                class="text__strong"
-              />
-              <img
-                src="./assets/fonts/Bereit-fur-alles-was-kommt.svg"
-                alt=""
-                class="text__span"
-              />
-            </div>
-            <button class="banner__btn">
-              <img src="./assets/fonts/Frame-1.svg" alt="" class="btn__media" />
+    <div class="phone">
+      <img src="./assets/img/iPhone6SPlus.png" alt="" class="phone__media">
+      <div class="banner__wrapper">
+        <div class="banner" data-step="1">
+          <div class="popup__open-wrapp">
+            <button class="popup__open">
+              <img src="./assets/img/plus.svg" alt="open" class="open__media" />
             </button>
           </div>
-          <div class="banner__content-right">
-            <div class="bunner__bubble">
-              <img src="./assets/img/comics.svg" alt="" class="bubble__media" />
-            </div>
-            <button class="banner__micro">
+          <div class="banner__popup close">
+            <button class="popup__close">
               <img
-                class="micro__media micro__media-noaction"
-                src="./assets/img/micro.svg"
-                alt="microphone"
+                class="close__media"
+                src="./assets/img/close.svg"
+                alt="close"
               />
             </button>
-            <button class="banner__arrow">
+            <video class="popup__video" autoplay muted loop>
+              <source src="./assets/video/video-4.mp4" />
+            </video>
+            <button class="video__btn sound-off">
               <img
-                class="arrow__media"
-                src="./assets/img/right-arrow.svg"
-                alt="arrow"
+                src="./assets/img/sound-off.png"
+                alt="sound img"
+                class="video__img"
               />
             </button>
+            <p class="popup__text">
+              Alles im Blick: Mit den neuen LED Frontscheinwerfern* und LED
+              Rückleuchten* entgeht Ihnen nichts mehr.
+            </p>
+              <img src="./assets/fonts/Frame-w2.svg" alt="" class="popup__button-media" />
           </div>
-        </div>
-        <div class="banner__subtext">
-          <img
-            style="width: 210px; height: 15px"
-            src="./assets/fonts/Abbildung-zeigt-Sonderausstattung-gegen-Mehrpreis.svg"
-            alt=""
-            class="banner__first-media"
-          />
+          <div class="banner__logo">
+            <img src="./assets/img/logo.png" alt="logo" class="logo__media" />
+          </div>
+          <div class="banner__content">
+            <div class="banner__content-left">
+              <div class="banner__text">
+                <img
+                  src="./assets/fonts/Der-neue-Caddy-Cargo.svg"
+                  alt=""
+                  class="text__strong"
+                />
+                <img
+                  src="./assets/fonts/Bereit-fur-alles-was-kommt.svg"
+                  alt=""
+                  class="text__span"
+                />
+              </div>
+              <button class="banner__btn">
+                <img src="./assets/fonts/Frame-1.svg" alt="" class="btn__media" />
+              </button>
+            </div>
+            <div class="banner__content-right">
+              <div class="bunner__bubble">
+                <img src="./assets/img/comics.svg" alt="" class="bubble__media" />
+              </div>
+              <button class="banner__micro">
+                <img
+                  class="micro__media micro__media-noaction"
+                  src="./assets/img/micro.svg"
+                  alt="microphone"
+                />
+              </button>
+              <button class="banner__arrow">
+                <img
+                  class="arrow__media"
+                  src="./assets/img/right-arrow.svg"
+                  alt="arrow"
+                />
+              </button>
+            </div>
+          </div>
+          <div class="banner__subtext">
+            <img
+              style="width: 210px; height: 15px"
+              src="./assets/fonts/Abbildung-zeigt-Sonderausstattung-gegen-Mehrpreis.svg"
+              alt=""
+              class="banner__first-media"
+            />
+          </div>
         </div>
       </div>
     </div>
