--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
       </div>
     </div>
-    <script src="./detect.js"></script>
+    <script src="./Detect.js-master/detect.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
