--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <div class="btn__Slide1" id="btn__Slide1"></div>
           <div class="ligal__Slide1" id="ligal__Slide1"></div>
 
-          <div class="comics__Slide1" id="comics__Slide1"></div>
+          <div class="comics__Slide1 active" id="comics__Slide1"></div>
           <div class="comics1__Slide1" id="comics1__Slide1"></div>
 
           <div class="mikro__Slide1" id="mikro__Slide1">
