--- a/index.html
+++ b/index.html
@@ -267,6 +267,6 @@
     </div>
 
     <script src="./Detect.js-master/detect.js"></script>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
