--- a/index.html
+++ b/index.html
@@ -8,212 +8,215 @@
 	<script type="text/javascript" src="index.1fb0316a.js"></script>
 </head>
 <body>
-	<div class="container">
-        <div id="hellopreloader"><div id="hellopreloader_preload"></div></div>
-        <div id="slideList">    	
-			<div class="slide1" id="slide1">
-				<div class="bg__Slide1" id="bg__Slide1"></div>
+	<div class="phone">
+    <img src="iPhone6SPlus.png" alt="" class="phone__media" />
+    <div class="container">
+      <div id="hellopreloader"><div id="hellopreloader_preload"></div></div>
+      <div id="slideList">    	
+    <div class="slide1" id="slide1">
+      <div class="bg__Slide1" id="bg__Slide1"></div>
 
-				<div class="logo__Slide1" id="logo__Slide1"></div>
-				<div class="left__Slide1" id="left__Slide1"></div>
-				<div class="right__Slide1" id="right__Slide1"></div>
+      <div class="logo__Slide1" id="logo__Slide1"></div>
+      <div class="left__Slide1" id="left__Slide1"></div>
+      <div class="right__Slide1" id="right__Slide1"></div>
 
-				<div class="text__Slide1" id="text__Slide1"></div>
-				<div class="btn__Slide1" id="btn__Slide1"></div>
-				<div class="ligal__Slide1" id="ligal__Slide1"></div>
+      <div class="text__Slide1" id="text__Slide1"></div>
+      <div class="btn__Slide1" id="btn__Slide1"></div>
+      <div class="ligal__Slide1" id="ligal__Slide1"></div>
 
-				<div class="comics__Slide1" id="comics__Slide1"></div>
-				<div class="comics1__Slide1" id="comics1__Slide1"></div>
+      <div class="comics__Slide1" id="comics__Slide1"></div>
+      <div class="comics1__Slide1" id="comics1__Slide1"></div>
 
-				<div class="mikro__Slide1 mikro__Slide" id="mikro__Slide1">
-					<div class="mikro__img__Slide1" id="mikro__img__Slide1"></div>
-					<img id="mikro__img1__Slide1" src="soundWaveForm.gif" alt="">
-				</div>
-				<div class="next__Slide1" id="next__Slide1"></div>
-			</div>
+      <div class="mikro__Slide1 mikro__Slide" id="mikro__Slide1">
+        <div class="mikro__img__Slide1" id="mikro__img__Slide1"></div>
+        <img id="mikro__img1__Slide1" src="soundWaveForm.gif" alt="">
+      </div>
+      <div class="next__Slide1" id="next__Slide1"></div>
+    </div>
 
-			<div class="slide2" id="slide2">
-				<div class="bg__Slide2" id="bg__Slide2"></div>
+    <div class="slide2" id="slide2">
+      <div class="bg__Slide2" id="bg__Slide2"></div>
 
-				<div class="logo__Slide2" id="logo__Slide2"></div>
-				<div class="left__Slide2" id="left__Slide2"></div>
-				<div class="right__Slide2" id="right__Slide2"></div>
+      <div class="logo__Slide2" id="logo__Slide2"></div>
+      <div class="left__Slide2" id="left__Slide2"></div>
+      <div class="right__Slide2" id="right__Slide2"></div>
 
-				<div class="text__Slide2" id="text__Slide2"></div>
-				<div class="btn__Slide2" id="btn__Slide2"></div>
-				<div class="ligal__Slide2" id="ligal__Slide2"></div>
+      <div class="text__Slide2" id="text__Slide2"></div>
+      <div class="btn__Slide2" id="btn__Slide2"></div>
+      <div class="ligal__Slide2" id="ligal__Slide2"></div>
 
-				<div class="comics__Slide2" id="comics__Slide2"></div>
-				<div class="comics1__Slide2" id="comics1__Slide2"></div>
+      <div class="comics__Slide2" id="comics__Slide2"></div>
+      <div class="comics1__Slide2" id="comics1__Slide2"></div>
 
-				<div class="mikro__Slide2 mikro__Slide" id="mikro__Slide2">
-					<div class="mikro__img__Slide2" id="mikro__img__Slide2"></div>
-					<img id="mikro__img1__Slide2" src="soundWaveForm.gif" alt="">
-				</div>
-				<div class="next__Slide2" id="next__Slide2"></div>
-			</div>
+      <div class="mikro__Slide2 mikro__Slide" id="mikro__Slide2">
+        <div class="mikro__img__Slide2" id="mikro__img__Slide2"></div>
+        <img id="mikro__img1__Slide2" src="soundWaveForm.gif" alt="">
+      </div>
+      <div class="next__Slide2" id="next__Slide2"></div>
+    </div>
 
-			<div class="slide3" id="slide3">
-				<div class="bg__Slide3" id="bg__Slide3"></div>
+    <div class="slide3" id="slide3">
+      <div class="bg__Slide3" id="bg__Slide3"></div>
 
-				<div class="modal__img__Slide3" id="modal__img__Slide3"></div>
+      <div class="modal__img__Slide3" id="modal__img__Slide3"></div>
 
-				<div class="modal__Slide3" id="modal__Slide3">
-					<div class="close" id="close__Slide3"></div>
+      <div class="modal__Slide3" id="modal__Slide3">
+        <div class="close" id="close__Slide3"></div>
 
-					<div class="video">
-						<video muted="" playsinline="" preload="" id="video__Slide3" src="video-3.mp4"></video>
+        <div class="video">
+          <video muted="" playsinline="" preload="" id="video__Slide3" src="video-3.mp4"></video>
 
-			        	<div class="muted" id="muted__Slide3"></div>
-			        	<div class="sound" id="sound__Slide3"></div>
+              <div class="muted" id="muted__Slide3"></div>
+              <div class="sound" id="sound__Slide3"></div>
 
-			        	<div class="replay" id="replay__Slide3"></div>
-					</div>
-
-					<div class="textModal__Slide3"></div>
-
-					<div class="btnColor"></div>
-				</div>
-
-				<div class="logo__Slide3" id="logo__Slide3"></div>
-				<div class="left__Slide3" id="left__Slide3"></div>
-				<div class="right__Slide3" id="right__Slide3"></div>
-
-				<div class="text__Slide3" id="text__Slide3"></div>
-				<div class="btn__Slide3" id="btn__Slide3"></div>
-				<div class="ligal__Slide3" id="ligal__Slide3"></div>
-
-				<div class="comics__Slide3" id="comics__Slide3"></div>
-				<div class="comics1__Slide3" id="comics1__Slide3"></div>
-
-				<div class="mikro__Slide3 mikro__Slide" id="mikro__Slide3">
-					<div class="mikro__img__Slide3" id="mikro__img__Slide3"></div>
-					<img id="mikro__img1__Slide3" src="soundWaveForm.gif" alt="">
-				</div>
-				<div class="next__Slide3" id="next__Slide3"></div>
-			</div>
-
-			<div class="slide4" id="slide4">
-				<div class="bg__Slide4" id="bg__Slide4"></div>
-
-				<div class="modal__img__Slide4" id="modal__img__Slide4"></div>
-
-				<div class="modal__Slide4" id="modal__Slide4">
-					<div class="close" id="close__Slide4"></div>
-
-					<div class="video">
-						<video muted="" playsinline="" preload="" id="video__Slide4" src="video-4.mp4"></video>
-
-			        	<div class="muted" id="muted__Slide4"></div>
-			        	<div class="sound" id="sound__Slide4"></div>
-
-			        	<div class="replay" id="replay__Slide4"></div>
-					</div>
-
-					<div class="textModal__Slide4"></div>
-
-					<div class="btnColor"></div>
-				</div>
-
-				<div class="logo__Slide4" id="logo__Slide4"></div>
-				<div class="left__Slide4" id="left__Slide4"></div>
-				<div class="right__Slide4" id="right__Slide4"></div>
-
-				<div class="text__Slide4" id="text__Slide4"></div>
-				<div class="btn__Slide4" id="btn__Slide4"></div>
-				<div class="ligal__Slide4" id="ligal__Slide4"></div>
-
-				<div class="comics__Slide4" id="comics__Slide4"></div>
-				<div class="comics1__Slide4" id="comics1__Slide4"></div>
-
-				<div class="mikro__Slide4 mikro__Slide" id="mikro__Slide4">
-					<div class="mikro__img__Slide4" id="mikro__img__Slide4"></div>
-					<img id="mikro__img1__Slide4" src="soundWaveForm.gif" alt="">
-				</div>
-				<div class="next__Slide4" id="next__Slide4"></div>
-			</div>
-
-			<div class="slide5" id="slide5">
-				<div class="bg__Slide5" id="bg__Slide5"></div>
-
-				<div class="modal__img__Slide5" id="modal__img__Slide5"></div>
-
-				<div class="modal__Slide5" id="modal__Slide5">
-					<div class="close" id="close__Slide5"></div>
-
-					<div class="video">
-						<video muted="" playsinline="" preload="" id="video__Slide5" src="video-5.mp4"></video>
-
-			        	<div class="muted" id="muted__Slide5"></div>
-			        	<div class="sound" id="sound__Slide5"></div>
-
-			        	<div class="replay" id="replay__Slide5"></div>
-					</div>
-
-					<div class="textModal__Slide5"></div>
-
-					<div class="btnColor"></div>
-				</div>
-
-				<div class="logo__Slide5" id="logo__Slide5"></div>
-				<div class="left__Slide5" id="left__Slide5"></div>
-				<div class="right__Slide5" id="right__Slide5"></div>
-
-				<div class="text__Slide5" id="text__Slide5"></div>
-				<div class="btn__Slide5" id="btn__Slide5"></div>
-				<div class="ligal__Slide5" id="ligal__Slide5"></div>
-
-				<div class="comics__Slide5" id="comics__Slide5"></div>
-				<div class="comics1__Slide5" id="comics1__Slide5"></div>
-
-				<div class="mikro__Slide5 mikro__Slide" id="mikro__Slide5">
-					<div class="mikro__img__Slide5" id="mikro__img__Slide5"></div>
-					<img id="mikro__img1__Slide5" src="soundWaveForm.gif" alt="">
-				</div>
-				<div class="next__Slide5" id="next__Slide5"></div>
-			</div>
-
-			<div class="slide6" id="slide6">
-				<div class="bg__Slide6" id="bg__Slide6"></div>
-
-				<div class="modal__img__Slide6" id="modal__img__Slide6"></div>
-
-				<div class="modal__Slide6" id="modal__Slide6">
-					<div class="close" id="close__Slide6"></div>
-
-					<div class="video">
-						<video muted="" playsinline="" preload="" id="video__Slide6" src="video-2.mp4"></video>
-
-			        	<div class="muted" id="muted__Slide6"></div>
-			        	<div class="sound" id="sound__Slide6"></div>
-
-			        	<div class="replay" id="replay__Slide6"></div>
-					</div>
-
-					<div class="textModal__Slide6"></div>
-
-					<div class="btnColor"></div>
-				</div>
-
-				<div class="logo__Slide6" id="logo__Slide6"></div>
-				<div class="left__Slide6" id="left__Slide6"></div>
-				<div class="right__Slide6" id="right__Slide6"></div>
-
-				<div class="text__Slide6" id="text__Slide6"></div>
-				<div class="btn__Slide6" id="btn__Slide6"></div>
-				<div class="ligal__Slide6" id="ligal__Slide6"></div>
-
-				<div class="comics__Slide6" id="comics__Slide6"></div>
-				<div class="comics1__Slide6" id="comics1__Slide6"></div>
-
-				<div class="mikro__Slide6 mikro__Slide" id="mikro__Slide6">
-					<div class="mikro__img__Slide6" id="mikro__img__Slide6"></div>
-					<img id="mikro__img1__Slide6" src="soundWaveForm.gif" alt="">
-				</div>
-				<div class="next__Slide6" id="next__Slide6"></div>
-			</div>
+              <div class="replay" id="replay__Slide3"></div>
         </div>
-	</div>
+
+        <div class="textModal__Slide3"></div>
+
+        <div class="btnColor"></div>
+      </div>
+
+      <div class="logo__Slide3" id="logo__Slide3"></div>
+      <div class="left__Slide3" id="left__Slide3"></div>
+      <div class="right__Slide3" id="right__Slide3"></div>
+
+      <div class="text__Slide3" id="text__Slide3"></div>
+      <div class="btn__Slide3" id="btn__Slide3"></div>
+      <div class="ligal__Slide3" id="ligal__Slide3"></div>
+
+      <div class="comics__Slide3" id="comics__Slide3"></div>
+      <div class="comics1__Slide3" id="comics1__Slide3"></div>
+
+      <div class="mikro__Slide3 mikro__Slide" id="mikro__Slide3">
+        <div class="mikro__img__Slide3" id="mikro__img__Slide3"></div>
+        <img id="mikro__img1__Slide3" src="soundWaveForm.gif" alt="">
+      </div>
+      <div class="next__Slide3" id="next__Slide3"></div>
+    </div>
+
+    <div class="slide4" id="slide4">
+      <div class="bg__Slide4" id="bg__Slide4"></div>
+
+      <div class="modal__img__Slide4" id="modal__img__Slide4"></div>
+
+      <div class="modal__Slide4" id="modal__Slide4">
+        <div class="close" id="close__Slide4"></div>
+
+        <div class="video">
+          <video muted="" playsinline="" preload="" id="video__Slide4" src="video-4.mp4"></video>
+
+              <div class="muted" id="muted__Slide4"></div>
+              <div class="sound" id="sound__Slide4"></div>
+
+              <div class="replay" id="replay__Slide4"></div>
+        </div>
+
+        <div class="textModal__Slide4"></div>
+
+        <div class="btnColor"></div>
+      </div>
+
+      <div class="logo__Slide4" id="logo__Slide4"></div>
+      <div class="left__Slide4" id="left__Slide4"></div>
+      <div class="right__Slide4" id="right__Slide4"></div>
+
+      <div class="text__Slide4" id="text__Slide4"></div>
+      <div class="btn__Slide4" id="btn__Slide4"></div>
+      <div class="ligal__Slide4" id="ligal__Slide4"></div>
+
+      <div class="comics__Slide4" id="comics__Slide4"></div>
+      <div class="comics1__Slide4" id="comics1__Slide4"></div>
+
+      <div class="mikro__Slide4 mikro__Slide" id="mikro__Slide4">
+        <div class="mikro__img__Slide4" id="mikro__img__Slide4"></div>
+        <img id="mikro__img1__Slide4" src="soundWaveForm.gif" alt="">
+      </div>
+      <div class="next__Slide4" id="next__Slide4"></div>
+    </div>
+
+    <div class="slide5" id="slide5">
+      <div class="bg__Slide5" id="bg__Slide5"></div>
+
+      <div class="modal__img__Slide5" id="modal__img__Slide5"></div>
+
+      <div class="modal__Slide5" id="modal__Slide5">
+        <div class="close" id="close__Slide5"></div>
+
+        <div class="video">
+          <video muted="" playsinline="" preload="" id="video__Slide5" src="video-5.mp4"></video>
+
+              <div class="muted" id="muted__Slide5"></div>
+              <div class="sound" id="sound__Slide5"></div>
+
+              <div class="replay" id="replay__Slide5"></div>
+        </div>
+
+        <div class="textModal__Slide5"></div>
+
+        <div class="btnColor"></div>
+      </div>
+
+      <div class="logo__Slide5" id="logo__Slide5"></div>
+      <div class="left__Slide5" id="left__Slide5"></div>
+      <div class="right__Slide5" id="right__Slide5"></div>
+
+      <div class="text__Slide5" id="text__Slide5"></div>
+      <div class="btn__Slide5" id="btn__Slide5"></div>
+      <div class="ligal__Slide5" id="ligal__Slide5"></div>
+
+      <div class="comics__Slide5" id="comics__Slide5"></div>
+      <div class="comics1__Slide5" id="comics1__Slide5"></div>
+
+      <div class="mikro__Slide5 mikro__Slide" id="mikro__Slide5">
+        <div class="mikro__img__Slide5" id="mikro__img__Slide5"></div>
+        <img id="mikro__img1__Slide5" src="soundWaveForm.gif" alt="">
+      </div>
+      <div class="next__Slide5" id="next__Slide5"></div>
+    </div>
+
+    <div class="slide6" id="slide6">
+      <div class="bg__Slide6" id="bg__Slide6"></div>
+
+      <div class="modal__img__Slide6" id="modal__img__Slide6"></div>
+
+      <div class="modal__Slide6" id="modal__Slide6">
+        <div class="close" id="close__Slide6"></div>
+
+        <div class="video">
+          <video muted="" playsinline="" preload="" id="video__Slide6" src="video-2.mp4"></video>
+
+              <div class="muted" id="muted__Slide6"></div>
+              <div class="sound" id="sound__Slide6"></div>
+
+              <div class="replay" id="replay__Slide6"></div>
+        </div>
+
+        <div class="textModal__Slide6"></div>
+
+        <div class="btnColor"></div>
+      </div>
+
+      <div class="logo__Slide6" id="logo__Slide6"></div>
+      <div class="left__Slide6" id="left__Slide6"></div>
+      <div class="right__Slide6" id="right__Slide6"></div>
+
+      <div class="text__Slide6" id="text__Slide6"></div>
+      <div class="btn__Slide6" id="btn__Slide6"></div>
+      <div class="ligal__Slide6" id="ligal__Slide6"></div>
+
+      <div class="comics__Slide6" id="comics__Slide6"></div>
+      <div class="comics1__Slide6" id="comics1__Slide6"></div>
+
+      <div class="mikro__Slide6 mikro__Slide" id="mikro__Slide6">
+        <div class="mikro__img__Slide6" id="mikro__img__Slide6"></div>
+        <img id="mikro__img1__Slide6" src="soundWaveForm.gif" alt="">
+      </div>
+      <div class="next__Slide6" id="next__Slide6"></div>
+    </div>
+      </div>
+</div>
+  </div>
 <script>(function () {
   // ASSET: src/index.html
   var $4d8a99e31ff559eeebf0200ec7849325$var$hellopreloader = document.getElementById("hellopreloader_preload");
